Basic UI created, added the usage of svg icons 	modified:   AutoMagik/AutoMagik.qrc 	modified:   AutoMagik/AutoMagik.ui 	new file:   AutoMagik/icons/add.svg 	new file:   AutoMagik/icons/add_comment.svg 	new file:   AutoMagik/icons/app_icon.svg 	new file:   AutoMagik/icons/back.svg 	new file:   AutoMagik/icons/check.svg 	new file:   AutoMagik/icons/delete.svg 	new file:   AutoMagik/icons/edit.svg 	new file:   AutoMagik/icons/manager.svg     new file:   AutoMagik/icons/person.svg 	new file:   AutoMagik/icons/worker.svg

--- a/AutoMagik/AutoMagik.qrc
+++ b/AutoMagik/AutoMagik.qrc
@@ -1,4 +1,15 @@
-<RCC>
-    <qresource prefix="AutoMagik">
-    </qresource>
+<!DOCTYPE RCC><RCC version="1.0">
+<qresource prefix="/icons">
+    <file alias="app_icon.svg">icons/app_icon.svg</file>
+    <file alias="add.svg">icons/add.svg</file>
+    <file alias="delete.svg">icons/delete.svg</file>
+    <file alias="edit.svg">icons/edit.svg</file>
+    <file alias="person.svg">icons/person.svg</file>
+    <file alias="check.svg">icons/check.svg</file>
+    <file alias="back.svg">icons/back.svg</file>
+    <file alias="manager.svg">icons/manager.svg</file>
+    <file alias="worker.svg">icons/worker.svg</file>
+    <file alias="add_comment.svg">icons/add_comment.svg</file>
+    <!-- Add any other SVG icons you use -->
+</qresource>
 </RCC>
