feat: Added sooooo much: - Car ninjas API integration - NHTSA API integration - Wikimedia API integration for image pulling - Adjusted the UI look a bit - Added several other functionalities (more info in the code)
I would be grateful if someone looked through this and made a todo list and maybe even coded something to make it better

--- a/AutoMagik/AutoMagik.qrc
+++ b/AutoMagik/AutoMagik.qrc
@@ -10,6 +10,6 @@
     <file alias="manager.svg">icons/manager.svg</file>
     <file alias="worker.svg">icons/worker.svg</file>
     <file alias="add_comment.svg">icons/add_comment.svg</file>
-    <!-- Add any other SVG icons you use -->
+	<file alias="info.svg">icons/info.svg</file>
 </qresource>
 </RCC>
