--- a/AutoMagik/AutoMagik.ui
+++ b/AutoMagik/AutoMagik.ui
@@ -17,28 +17,246 @@
    <iconset>
     <normaloff>.</normaloff>.</iconset>
   </property>
-  <property name="styleSheet">
-   <string>
-      /* QSS Stylesheet (Simplified, remove MenuBar/Tooltip styles if added) */
-      :root {
-         --primaryColor: #6200EE;
-         --secondaryColor: #03DAC6;
-         --backgroundColor: #FFFFFF;
-         --surfaceColor: #FFFFFF;
-         --errorColor: #B00020;
-         --onPrimary: #FFFFFF;
-         --onSecondary: #000000;
-         --onBackground: #000000;
-         --onSurface: #000000;
-         --onError: #FFFFFF;
-         --primaryDarker: #3700B3;
-         --surfaceVariant: #F5F5F5;
-         --outlineColor: #BDBDBD;
-       }
-       /* ... (Keep rules for QMainWindow, QPushButton, QTableWidget, QLineEdit, etc.) ... */
-       /* ... (Remove rules specifically for QMenuBar, QMenu, QToolTip if they exist) ... */
-    </string>
-  </property>
+     <property name="styleSheet">
+		 <string>
+
+			 /* Base Colors */
+			 QMainWindow, QDialog {
+			     background-color: #2E2E2E; /* Dark background for windows */
+			     color: #E0E0E0;           /* Light default text */
+			 }
+
+
+			 #centralWidget, #modeSelectionPage, #WorkerLoginPage, #registerManagerPage,
+			 #ManagerLoginPage, #managerTasksPage, #workerDashboardPage,
+			 #managerCarsPage, #managerWorkersPage {
+			    background-color: #2E2E2E;
+			 }
+
+			 /* Labels */
+			 QLabel {
+			     color: #E0E0E0;
+			     background-color: transparent;
+			 }
+			 #titleLabel {
+			    color: #E06060;
+			 }
+			 #label, #label_2, #label_3, #managerTitleLabel, #managerCarLabel, #managerTitleLabel_2 {
+			    color: #E0E0E0;
+			 }
+			 #workerDetailTitle, #workerTasksTitle {
+			    color: #E0E0E0;
+			 }
+
+
+			 /* Input Fields */
+			 QLineEdit, QTextEdit, QSpinBox, QComboBox {
+			     background-color: #3A3A3A;
+			     color: #E0E0E0;
+			     border: 1px solid #616161;
+			     border-radius: 4px;
+			     padding: 4px;
+			 }
+			 QLineEdit:focus, QTextEdit:focus, QSpinBox:focus, QComboBox:focus {
+			    border: 1px solid #A00000;
+			 }
+			 QLineEdit:disabled, QTextEdit:disabled, QSpinBox:disabled, QComboBox:disabled {
+			    background-color: #4A4A4A;
+			    color: #888888;
+			    border-color: #555555;
+			 }
+
+
+			 /* Buttons */
+			 QPushButton {
+			     background-color: #A00000;
+			     color: #FFFFFF;
+			     border: 1px solid #C04040;
+			     border-radius: 4px;
+			     padding: 6px 12px;
+			     min-height: 25px;
+			 }
+			 QPushButton:hover {
+			    background-color: #C04040;
+			 }
+			 QPushButton:pressed {
+			     background-color: #700000;
+			     border-color: #700000;
+			 }
+			 QPushButton:disabled {
+			     background-color: #4A4A4A;
+			     color: #888888;
+			     border-color: #616161;
+			 }
+			 /* Special Buttons */
+			 QPushButton#forgotPasswordButton1, QPushButton#forgotPasswordButton2,
+			 QPushButton#createManagerAccButton {
+			     background-color: transparent;
+			     color: #E06060;
+			     border: none;
+			     text-decoration: underline;
+			     padding: 2px;
+			     min-height: 15px;
+			 }
+			 QPushButton#forgotPasswordButton1:hover, QPushButton#forgotPasswordButton2:hover,
+			 QPushButton#createManagerAccButton:hover {
+			    color: #FFFFFF;
+			 }
+
+
+			 /* TableView / HeaderView */
+			 QTableWidget {
+			     background-color: #3A3A3A;
+			     color: #E0E0E0;
+			     border: 1px solid #616161;
+			     gridline-color: #616161;
+			     selection-background-color: #A00000;
+			     selection-color: #FFFFFF;
+			 }
+			 QHeaderView::section {
+			     background-color: #4A4A4A;
+			     color: #E0E0E0;
+			     padding: 4px;
+			     border: 1px solid #616161;
+			     border-bottom: 2px solid #A00000;
+			 }
+			 QTableWidget::item {
+			    padding: 3px;
+			 }
+
+			 /* TableWidget */
+			 QTableWidget QTableCornerButton::section {
+			     background-color: #4A4A4A;
+			     border: 1px solid #616161;
+			     border-top: none;
+			     border-left: none;
+			     border-right: 1px solid #616161;
+			     border-bottom: 2px solid #A00000;
+			 }
+
+
+			 /* ListWidget */
+			 QListWidget {
+			     background-color: #3A3A3A;
+			     color: #E0E0E0;
+			     border: 1px solid #616161; 
+			 }
+			 QListWidget::item {
+			    padding: 4px;
+			 }
+			 QListWidget::item:selected {
+			     background-color: #A00000;
+			     color: #FFFFFF;          
+			 }
+			 QListWidget::item:hover:!selected {
+			    background-color: #4A4A4A; 
+			 }
+
+
+			 /* GroupBox */
+			 QGroupBox {
+			     background-color: #3A3A3A; 
+			     border: 1px solid #616161; 
+			     border-radius: 4px;
+			     margin-top: 15px; 
+			     padding: 10px;
+			     padding-top: 20px; 
+			 }
+			 QGroupBox::title {
+			     subcontrol-origin: margin;
+			     subcontrol-position: top left;
+			     padding: 2px 8px; 
+			     margin-left: 10px;
+			     color: #E0E0E0;   
+			     background-color: #4A4A4A; 
+			     border-radius: 3px;
+			 }
+
+
+			 /* SpinBox / ComboBox Arrows and Dropdown */
+			 QComboBox::drop-down, QSpinBox::up-button, QSpinBox::down-button {
+			     border: 1px solid #616161;
+			     background-color: #4A4A4A;
+			     min-width: 20px; 
+			 }
+			 QComboBox::drop-down:hover, QSpinBox::up-button:hover, QSpinBox::down-button:hover {
+			     background-color: #555555;
+			 }
+			 
+			 /* Basic arrow indication */
+			 QComboBox::down-arrow {
+			     border: 1px solid #E0E0E0;
+			     width: 5px;
+			     height: 5px;
+			     border-width: 0 1px 1px 0;
+			     margin: 2px;
+			 }
+			 QSpinBox::up-arrow {
+			     border: 1px solid #E0E0E0;
+			     width: 5px;
+			     height: 5px;
+			     border-width: 1px 1px 0 0;
+			     margin: 2px;
+			 }
+			 QSpinBox::down-arrow {
+			     border: 1px solid #E0E0E0;
+			     width: 5px;
+			     height: 5px;
+			     border-width: 0 1px 1px 0;
+			     margin: 2px;
+			 }
+             
+			 /* Dropdown list */
+			 QComboBox QAbstractItemView { 
+			     background-color: #3A3A3A;
+			     color: #E0E0E0;
+			     border: 1px solid #616161;
+			     selection-background-color: #A00000; 
+			     selection-color: #FFFFFF;
+			     padding: 2px;
+			 }
+
+			 /* ScrollBars */
+			 QScrollBar:vertical {
+			     border: 1px solid #616161;
+			     background: #3A3A3A;
+			     width: 12px;
+			     margin: 0px 0px 0px 0px;
+			 }
+			 QScrollBar::handle:vertical {
+			     background: #616161;
+			     min-height: 20px;
+			     border-radius: 4px;
+			 }
+			 QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical {
+			     height: 0px;
+			     background: none;
+			 }
+			 QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
+			    background: none;
+			 }
+
+			 QScrollBar:horizontal {
+			     border: 1px solid #616161;
+			     background: #3A3A3A;
+			     height: 12px;
+			     margin: 0px 0px 0px 0px;
+			 }
+			 QScrollBar::handle:horizontal {
+			     background: #616161;
+			     min-width: 20px;
+			     border-radius: 4px;
+			 }
+			 QScrollBar::add-line:horizontal, QScrollBar::sub-line:horizontal {
+			     width: 0px;
+			     background: none;
+			 }
+			 QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal {
+			    background: none;
+			 }
+
+		 </string>
+	 </property> 
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_9">
     <item>
@@ -1230,171 +1448,206 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="workerDashboardPage">
-       <layout class="QHBoxLayout" name="workerMainLayout">
-        <property name="leftMargin">
-         <number>12</number>
-        </property>
-        <property name="topMargin">
-         <number>12</number>
-        </property>
-        <property name="rightMargin">
-         <number>12</number>
-        </property>
-        <property name="bottomMargin">
-         <number>12</number>
-        </property>
-        <item>
-         <layout class="QVBoxLayout" name="workerTaskListLayout">
-          <item>
-           <widget class="QLabel" name="workerTasksTitle">
-            <property name="font">
-             <font>
-              <pointsize>14</pointsize>
-             </font>
-            </property>
-            <property name="text">
-             <string>Your Assigned Tasks</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QListWidget" name="workerTaskListWidget">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-              <horstretch>0</horstretch>
-              <verstretch>1</verstretch>
-             </sizepolicy>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="workerBackButton">
-            <property name="text">
-             <string>Sign Out</string>
-            </property>
-            <property name="icon">
-             <iconset resource="AutoMagik.qrc">
-              <normaloff>:/icons/back.svg</normaloff>:/icons/back.svg</iconset>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <layout class="QVBoxLayout" name="workerTaskDetailLayout">
-          <property name="spacing">
-           <number>10</number>
-          </property>
-          <item>
-           <widget class="QLabel" name="workerDetailTitle">
-            <property name="font">
-             <font>
-              <pointsize>16</pointsize>
-              <bold>true</bold>
-             </font>
-            </property>
-            <property name="text">
-             <string>Task Details</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QGroupBox" name="carInfoGroupBox">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>100</height>
-             </size>
-            </property>
-            <property name="title">
-             <string>Car Info</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QGroupBox" name="taskInfoGroupBox">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>100</height>
-             </size>
-            </property>
-            <property name="title">
-             <string>Task Info</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QGroupBox" name="commentsGroupBox">
-            <property name="title">
-             <string>Comments / Log</string>
-            </property>
-            <layout class="QVBoxLayout" name="commentsLayout">
-             <item>
-              <widget class="QTextEdit" name="commentsTextEdit"/>
-             </item>
-             <item>
-              <layout class="QHBoxLayout" name="newCommentLayout">
-               <item>
-                <widget class="QLineEdit" name="newCommentLineEdit"/>
-               </item>
-               <item>
-                <widget class="QPushButton" name="addCommentButton">
-                 <property name="enabled">
-                  <bool>false</bool>
-                 </property>
-                 <property name="text">
-                  <string>Add</string>
-                 </property>
-                 <property name="icon">
-                  <iconset resource="AutoMagik.qrc">
-                   <normaloff>:/icons/add_comment.svg</normaloff>:/icons/add_comment.svg</iconset>
-                 </property>
-                </widget>
-               </item>
-              </layout>
-             </item>
-            </layout>
-           </widget>
-          </item>
-          <item>
-           <spacer name="workerDetailSpacer">
-            <property name="orientation">
-             <enum>Qt::Orientation::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QPushButton" name="markCompleteButton">
-            <property name="enabled">
-             <bool>false</bool>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>50</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>Mark Task as Completed</string>
-            </property>
-            <property name="icon">
-             <iconset resource="AutoMagik.qrc">
-              <normaloff>:/icons/check.svg</normaloff>:/icons/check.svg</iconset>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-       </layout>
-      </widget>
+	    <widget class="QWidget" name="workerDashboardPage">
+		    <layout class="QHBoxLayout" name="workerMainLayout">
+			    <property name="leftMargin">
+				    <number>12</number>
+			    </property>
+			    <property name="topMargin">
+				    <number>12</number>
+			    </property>
+			    <property name="rightMargin">
+				    <number>12</number>
+			    </property>
+			    <property name="bottomMargin">
+				    <number>12</number>
+			    </property>
+			    <item>
+				    <layout class="QVBoxLayout" name="workerTaskListLayout">
+					    <item>
+						    <widget class="QLabel" name="workerTasksTitle">
+							    <property name="font">
+								    <font>
+									    <pointsize>14</pointsize>
+								    </font>
+							    </property>
+							    <property name="text">
+								    <string>Your Assigned Tasks</string>
+							    </property>
+						    </widget>
+					    </item>
+					    <item>
+						    <widget class="QListWidget" name="workerTaskListWidget">
+							    <property name="sizePolicy">
+								    <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+									    <horstretch>0</horstretch>
+									    <verstretch>1</verstretch>
+								    </sizepolicy>
+							    </property>
+						    </widget>
+					    </item>
+					    <item>
+						    <widget class="QPushButton" name="workerBackButton">
+							    <property name="text">
+								    <string>Sign Out</string>
+							    </property>
+							    <property name="icon">
+								    <iconset resource="AutoMagik.qrc">
+									    <normaloff>:/icons/back.svg</normaloff>:/icons/back.svg
+								    </iconset>
+							    </property>
+						    </widget>
+					    </item>
+				    </layout>
+			    </item>
+			    <item>
+				    <layout class="QVBoxLayout" name="workerTaskDetailLayout">
+					    <property name="spacing">
+						    <number>10</number>
+					    </property>
+					    <item>
+						    <widget class="QLabel" name="workerDetailTitle">
+							    <property name="font">
+								    <font>
+									    <pointsize>16</pointsize>
+									    <bold>true</bold>
+								    </font>
+							    </property>
+							    <property name="text">
+								    <string>Task Details</string>
+							    </property>
+						    </widget>
+					    </item>
+					    <item>
+						    <widget class="QGroupBox" name="carInfoGroupBox">
+							    <property name="minimumSize">
+								    <size>
+									    <width>0</width>
+									    <height>100</height>
+								    </size>
+							    </property>
+							    <property name="title">
+								    <string>Car Info</string>
+							    </property>
+						    </widget>
+					    </item>
+					    <item>
+						    <widget class="QGroupBox" name="taskInfoGroupBox">
+							    <property name="minimumSize">
+								    <size>
+									    <width>0</width>
+									    <height>100</height>
+								    </size>
+							    </property>
+							    <property name="title">
+								    <string>Task Info</string>
+							    </property>
+						    </widget>
+					    </item>
+					    <item>
+						    <layout class="QHBoxLayout" name="horizontalLayout_CarInfoButton">
+							    <item>
+								    <widget class="QPushButton" name="carInfoButton">
+									    <property name="enabled">
+										    <bool>false</bool>
+									    </property>
+									    <property name="text">
+										    <string>Model Information</string>
+									    </property>
+									    <property name="icon">
+										    <iconset resource="AutoMagik.qrc">
+											    <normaloff>:/icons/info.svg</normaloff>:/icons/info.svg
+										    </iconset>
+									    </property>
+								    </widget>
+							    </item>
+							    <item>
+								    <spacer name="horizontalSpacer_CarInfoButton">
+									    <property name="orientation">
+										    <enum>Qt::Orientation::Horizontal</enum>
+									    </property>
+									    <property name="sizeHint" stdset="0">
+										    <size>
+											    <width>40</width>
+											    <height>20</height>
+										    </size>
+									    </property>
+								    </spacer>
+							    </item>
+						    </layout>
+					    </item>
+					    <item>
+						    <widget class="QGroupBox" name="commentsGroupBox">
+							    <property name="title">
+								    <string>Comments / Log</string>
+							    </property>
+							    <layout class="QVBoxLayout" name="commentsLayout">
+								    <item>
+									    <widget class="QTextEdit" name="commentsTextEdit"/>
+								    </item>
+								    <item>
+									    <layout class="QHBoxLayout" name="newCommentLayout">
+										    <item>
+											    <widget class="QLineEdit" name="newCommentLineEdit"/>
+										    </item>
+										    <item>
+											    <widget class="QPushButton" name="addCommentButton">
+												    <property name="enabled">
+													    <bool>false</bool>
+												    </property>
+												    <property name="text">
+													    <string>Add</string>
+												    </property>
+												    <property name="icon">
+													    <iconset resource="AutoMagik.qrc">
+														    <normaloff>:/icons/add_comment.svg</normaloff>:/icons/add_comment.svg
+													    </iconset>
+												    </property>
+											    </widget>
+										    </item>
+									    </layout>
+								    </item>
+							    </layout>
+						    </widget>
+					    </item>
+					    <item>
+						    <spacer name="workerDetailSpacer">
+							    <property name="orientation">
+								    <enum>Qt::Orientation::Vertical</enum>
+							    </property>
+							    <property name="sizeHint" stdset="0">
+								    <size>
+									    <width>0</width>
+									    <height>0</height>
+								    </size>
+							    </property>
+						    </spacer>
+					    </item>
+					    <item>
+						    <widget class="QPushButton" name="markCompleteButton">
+							    <property name="enabled">
+								    <bool>false</bool>
+							    </property>
+							    <property name="minimumSize">
+								    <size>
+									    <width>0</width>
+									    <height>50</height>
+								    </size>
+							    </property>
+							    <property name="text">
+								    <string>Mark Task as Completed</string>
+							    </property>
+							    <property name="icon">
+								    <iconset resource="AutoMagik.qrc">
+									    <normaloff>:/icons/check.svg</normaloff>:/icons/check.svg
+								    </iconset>
+							    </property>
+						    </widget>
+					    </item>
+				    </layout>
+			    </item>
+		    </layout>
+	    </widget>
       <widget class="QWidget" name="managerCarsPage">
        <layout class="QVBoxLayout" name="verticalLayout_7">
         <item>
